--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     <action selector="tapUp:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M4J-fW-xmM"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WiX-66-u8x">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WiX-66-u8x">
                                 <rect key="frame" x="0.0" y="612" width="55" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="36"/>
@@ -53,7 +53,7 @@
                                     <action selector="decrementButtonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="coG-4n-XrX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="He9-vt-pRI">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="He9-vt-pRI">
                                 <rect key="frame" x="320" y="612" width="55" height="55"/>
                                 <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="36"/>
@@ -64,46 +64,48 @@
                                     <action selector="incrementButtonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="81N-ZE-Nfg"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="120" textAlignment="center" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="eZ1-Sw-uwE">
+                                <rect key="frame" x="0.0" y="544" width="375" height="44"/>
+                                <color key="textColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="48"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" keyboardAppearance="alert" returnKeyType="go" smartDashesType="no" smartQuotesType="no"/>
+                                <connections>
+                                    <action selector="editedTextField:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="ysf-JJ-aZF"/>
+                                    <action selector="textFieldValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="429-86-8sA"/>
+                                </connections>
+                            </textField>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="100" minValue="60" maxValue="250" translatesAutoresizingMaskIntoConstraints="NO" id="vWP-KZ-vbN" customClass="CustomHeightSlider" customModule="TAP_Metronome_Swift" customModuleProvider="target">
                                 <rect key="frame" x="53" y="612" width="269" height="56"/>
                                 <connections>
                                     <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="UwC-k3-Qi3"/>
                                 </connections>
                             </slider>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="120" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ze5-m6-xwQ">
-                                <rect key="frame" x="125" y="516" width="125" height="72"/>
-                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="48"/>
-                                <color key="textColor" red="0.70588235290000001" green="0.70588235290000001" blue="0.70588235290000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.047058823529411764" green="0.047058823529411764" blue="0.047058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="WiX-66-u8x" firstAttribute="bottom" secondItem="vWP-KZ-vbN" secondAttribute="bottom" id="0z9-RP-SAt"/>
-                            <constraint firstAttribute="centerX" secondItem="Ze5-m6-xwQ" secondAttribute="centerX" id="4DL-06-52M"/>
                             <constraint firstAttribute="centerX" secondItem="y8r-1J-ZFl" secondAttribute="centerX" id="6fM-Xn-aF0"/>
                             <constraint firstItem="He9-vt-pRI" firstAttribute="leading" secondItem="vWP-KZ-vbN" secondAttribute="trailing" id="8en-ks-o2a"/>
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="9WH-lv-5nf"/>
                             <constraint firstItem="WiX-66-u8x" firstAttribute="width" secondItem="vWP-KZ-vbN" secondAttribute="height" id="CNC-43-zHJ"/>
-                            <constraint firstItem="vWP-KZ-vbN" firstAttribute="top" secondItem="Ze5-m6-xwQ" secondAttribute="bottom" constant="24" id="FG1-Ig-tw8"/>
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:1" id="OnA-Dj-Zvq"/>
                             <constraint firstAttribute="centerY" secondItem="y8r-1J-ZFl" secondAttribute="centerY" id="PGb-wO-03X"/>
+                            <constraint firstItem="vWP-KZ-vbN" firstAttribute="top" secondItem="eZ1-Sw-uwE" secondAttribute="bottom" constant="24" id="WKW-19-9L5"/>
                             <constraint firstItem="vWP-KZ-vbN" firstAttribute="leading" secondItem="WiX-66-u8x" secondAttribute="trailing" id="Zov-Gi-eUm"/>
                             <constraint firstItem="He9-vt-pRI" firstAttribute="height" secondItem="vWP-KZ-vbN" secondAttribute="height" id="Zqg-6F-Q3X"/>
-                            <constraint firstItem="Ze5-m6-xwQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="eQX-hK-GEm"/>
+                            <constraint firstItem="eZ1-Sw-uwE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cfK-Yf-yy3"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vWP-KZ-vbN" secondAttribute="bottom" id="iBM-Cd-kB1"/>
                             <constraint firstItem="He9-vt-pRI" firstAttribute="width" secondItem="vWP-KZ-vbN" secondAttribute="height" multiplier="1:1" id="nAi-Kb-Mid"/>
                             <constraint firstAttribute="trailing" secondItem="He9-vt-pRI" secondAttribute="trailing" id="no4-CG-dZe"/>
+                            <constraint firstItem="eZ1-Sw-uwE" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="q7P-pq-EPP"/>
                             <constraint firstItem="WiX-66-u8x" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="wkW-3q-oUx"/>
                             <constraint firstItem="He9-vt-pRI" firstAttribute="bottom" secondItem="vWP-KZ-vbN" secondAttribute="bottom" id="xdI-j2-V42"/>
                             <constraint firstItem="WiX-66-u8x" firstAttribute="height" secondItem="vWP-KZ-vbN" secondAttribute="height" id="zJl-Q1-Zrs"/>
-                            <constraint firstAttribute="centerY" secondItem="Ze5-m6-xwQ" secondAttribute="centerY" constant="-169" id="zpK-w8-JGP"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
                                 <exclude reference="9WH-lv-5nf"/>
                                 <exclude reference="OnA-Dj-Zvq"/>
-                                <exclude reference="zpK-w8-JGP"/>
                             </mask>
                         </variation>
                     </view>
@@ -111,14 +113,14 @@
                         <outlet property="decrementButton" destination="WiX-66-u8x" id="GsV-Pd-g0z"/>
                         <outlet property="incrementButton" destination="He9-vt-pRI" id="uLJ-eW-npo"/>
                         <outlet property="tapButton" destination="y8r-1J-ZFl" id="dFV-bS-rBC"/>
-                        <outlet property="tempoLabel" destination="Ze5-m6-xwQ" id="JWC-DK-Pzj"/>
                         <outlet property="tempoSlider" destination="vWP-KZ-vbN" id="c1I-h8-MxZ"/>
+                        <outlet property="tempoTextField" destination="eZ1-Sw-uwE" id="kad-yx-aHy"/>
                         <outlet property="timeSignatureButton" destination="P3s-2O-r0N" id="7IR-xF-t7m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-414" y="449"/>
+            <point key="canvasLocation" x="-415.19999999999999" y="448.42578710644682"/>
         </scene>
     </scenes>
 </document>
