--- a/Metronome-Swift/Base.lproj/Main.storyboard
+++ b/Metronome-Swift/Base.lproj/Main.storyboard
@@ -80,17 +80,27 @@
                                     <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="UwC-k3-Qi3"/>
                                 </connections>
                             </slider>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vgO-S6-9R3">
+                                <rect key="frame" x="0.0" y="506" width="375" height="30"/>
+                                <color key="backgroundColor" red="0.35294117650000001" green="0.35294117650000001" blue="0.35294117650000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="^">
+                                    <color key="titleColor" red="0.99607843139999996" green="0.99607843139999996" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.047058823529411764" green="0.047058823529411764" blue="0.047058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="WiX-66-u8x" firstAttribute="bottom" secondItem="vWP-KZ-vbN" secondAttribute="bottom" id="0z9-RP-SAt"/>
                             <constraint firstAttribute="centerX" secondItem="y8r-1J-ZFl" secondAttribute="centerX" id="6fM-Xn-aF0"/>
                             <constraint firstItem="He9-vt-pRI" firstAttribute="leading" secondItem="vWP-KZ-vbN" secondAttribute="trailing" id="8en-ks-o2a"/>
+                            <constraint firstItem="vgO-S6-9R3" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="8li-t9-QvK"/>
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="9WH-lv-5nf"/>
                             <constraint firstItem="WiX-66-u8x" firstAttribute="width" secondItem="vWP-KZ-vbN" secondAttribute="height" id="CNC-43-zHJ"/>
                             <constraint firstItem="y8r-1J-ZFl" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="1:1" id="OnA-Dj-Zvq"/>
                             <constraint firstAttribute="centerY" secondItem="y8r-1J-ZFl" secondAttribute="centerY" id="PGb-wO-03X"/>
+                            <constraint firstItem="vgO-S6-9R3" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QDF-L2-Dbs"/>
                             <constraint firstItem="vWP-KZ-vbN" firstAttribute="top" secondItem="eZ1-Sw-uwE" secondAttribute="bottom" constant="24" id="WKW-19-9L5"/>
+                            <constraint firstItem="eZ1-Sw-uwE" firstAttribute="top" secondItem="vgO-S6-9R3" secondAttribute="bottom" constant="8" id="Zmx-um-gFu"/>
                             <constraint firstItem="vWP-KZ-vbN" firstAttribute="leading" secondItem="WiX-66-u8x" secondAttribute="trailing" id="Zov-Gi-eUm"/>
                             <constraint firstItem="He9-vt-pRI" firstAttribute="height" secondItem="vWP-KZ-vbN" secondAttribute="height" id="Zqg-6F-Q3X"/>
                             <constraint firstItem="eZ1-Sw-uwE" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="cfK-Yf-yy3"/>
@@ -112,6 +122,7 @@
                     <connections>
                         <outlet property="decrementButton" destination="WiX-66-u8x" id="GsV-Pd-g0z"/>
                         <outlet property="incrementButton" destination="He9-vt-pRI" id="uLJ-eW-npo"/>
+                        <outlet property="showControlsButton" destination="vgO-S6-9R3" id="l8K-6F-3ii"/>
                         <outlet property="tapButton" destination="y8r-1J-ZFl" id="dFV-bS-rBC"/>
                         <outlet property="tempoSlider" destination="vWP-KZ-vbN" id="c1I-h8-MxZ"/>
                         <outlet property="tempoTextField" destination="eZ1-Sw-uwE" id="kad-yx-aHy"/>
